# trigger_bot

./: .cursorrules  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: top_monde_2025-08-29.txt  top_monde_2025-10-01.txt  top_monde_2025-10-31.txt  top_monde_2025-11-02.txt  top_monde_2025-12-01.txt  top_monde_2026-01-05.txt  top_monde_2_7_2025-08-29.txt  top_monde_2_7_2025-10-01.txt  top_monde_2_7_2025-10-31.txt  top_monde_2_7_2025-11-02.txt  top_monde_2_7_2025-12-01.txt  top_monde_2_7_2026-01-05.txt  top_monde_worst_100_2025-10-31.txt  top_monde_worst_100_2025-11-02.txt  top_monde_worst_100_2025-12-01.txt  top_monde_worst_100_2026-01-05.txt
data/history/: Coffre-fort ETF_2025-08-22.csv  L'univers crypto_2025-08-22.csv  TOP MONDE_2025-08-10.csv  TOP MONDE_2025-08-22.csv  TOP MONDE_2025-08-25.csv  TOP MONDE_2025-08-29 (1).csv  TOP MONDE_2025-08-29.csv  TOP MONDE_2025-09-29.csv  sp500_monthly_data.csv  sp500_top_performers_all_periods.csv  top_monde_monthly_data.csv  top_monde_performers_all_periods.csv
data/ready_to_use/: TOP MONDE_2025-08-10_enhanced.csv  TOP MONDE_2025-08-22_enhanced.csv  TOP MONDE_2025-08-25_enhanced.csv  TOP MONDE_2025-08-29_enhanced.csv  TOP MONDE_2025-09-29_enhanced.csv  TOP MONDE_2025-10-01.csv  TOP MONDE_2025-10-01_enhanced.csv  TOP MONDE_2025-10-18.csv  TOP MONDE_2025-10-18_enhanced.csv  TOP MONDE_2025-10-24.csv  (+5 more)
src/: __init__.py  cleanup_files.py  get_sp500_tickers_history.py  get_top_tickers.py  ticker_list.py  top_monde_ranking.py
tests/: conftest.py  test_ticker_list.py  test_top_monde_ranking.py
(+9 files in other folders)
