[project]
name = "trigger-bot"
version = "0.1.0"
description = "Analysis pipeline and ticker list generator for TradingView from TOP MONDE data"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "yfinance>=0.2.0",
    "numpy>=1.24.0",
    "lxml>=4.9.0",
    "html5lib>=1.1",
    "beautifulsoup4>=4.12.0",
]
